[change] db connection

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
         published: 8080
         protocol: tcp
         mode: host
+    depends_on:
+      - db
 
   db:
     image: mariadb:latest
