[add] 環境変数によって各種パラメータを切り替える機構を実装

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,8 @@ services:
         published: 8080
         protocol: tcp
         mode: host
+    environment:
+      - ECHO_ENV=development
     depends_on:
       - db
 
